--- a/src/main/resources/View/SourceFileView.fxml
+++ b/src/main/resources/View/SourceFileView.fxml
@@ -36,13 +36,10 @@
             <BorderPane.margin>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </BorderPane.margin>
-            <Label fx:id="fileName" maxWidth="Infinity" BorderPane.alignment="TOP_CENTER">
+            <Label fx:id="fileName" maxWidth="Infinity" BorderPane.alignment="TOP_CENTER" style="-fx-font-size: 18;">
                 <tooltip>
                     <Tooltip fx:id="fileNameTooltip"/>
                 </tooltip>
-                <font>
-                    <Font size="18.0"/>
-                </font>
             </Label>
             <HBox fx:id="tracks" spacing="5"/>
         </VBox>
