--- a/src/main/resources/View/MainView.fxml
+++ b/src/main/resources/View/MainView.fxml
@@ -2,12 +2,10 @@
 <?import com.pixelduke.control.Ribbon?>
 <?import com.pixelduke.control.ribbon.RibbonGroup?>
 <?import com.pixelduke.control.ribbon.RibbonTab?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.*?>
 <BorderPane fx:id="mainPane" xmlns:fx="http://javafx.com/fxml" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity"
             minWidth="-Infinity" style="-fx-background-color: white;"
@@ -52,9 +50,16 @@
         <ScrollPane hbarPolicy="ALWAYS" vbarPolicy="ALWAYS" fitToWidth="true" fitToHeight="true">
             <BorderPane prefHeight="-Infinity" prefWidth="-Infinity">
                 <center>
-                    <HBox fx:id="centerPane" />
+                    <HBox fx:id="centerPane"/>
                 </center>
             </BorderPane>
         </ScrollPane>
     </center>
+    <bottom>
+        <HBox style="-fx-padding: 5 5 5 5;" spacing="5" alignment="CENTER_LEFT">
+            <ProgressBar fx:id="progress" prefWidth="400"/>
+            <Label fx:id="percent" style="-fx-font-size: 18;" prefWidth="50"/>
+            <Label fx:id="message" style="-fx-font-size: 18;" HBox.hgrow="ALWAYS"/>
+        </HBox>
+    </bottom>
 </BorderPane>
